# khiops-python

./: .git_commit_template  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  docs-requirements.txt  pyproject.toml  run_fake_remote_file_servers.sh  setup.cfg  setup.py  test-requirements.txt  versioneer.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: generic-issue-template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/instructions/: ci-workflows.instructions.md  doc-changes.instructions.md  docker-changes.instructions.md  python-changes.instructions.md
.github/workflows/: api-docs.yml  build-conda-package.yml  build-dev-container-on-push.yml  build-dev-container.yml  build-pip-package.yml  build-ubuntu-khiops-container.yml  conda.yml  deploy-doc-pages.yml  dev-docker.yml  integration-tests.yml  pip.yml  pre-commit-checks.yml  quick-checks.yml  release.yml  run-unit-tests.yml  test-conda-forge-package.yml  tests.yml  unit-and-integration-tests.yml  unit-tests.yml
doc/: README.md  clean-doc  clean.sh  conf.py  convert-samples-hook  convert_samples.py  convert_tutorials.py  core_input_types.rst  create-doc  create.sh  index.rst  json_files.rst  multi_table_primer.rst  multi_table_tasks.rst  notes.rst  requirements.txt
doc/_static/css/: custom.css
doc/_templates/autosummary/: class.rst  method.rst  module.rst
doc/core/: index.rst
doc/internal/: index.rst
doc/samples/: samples.py  samples.rst  samples_sklearn.ipynb  samples_sklearn.rst
doc/sklearn/: index.rst
doc/tools/: index.rst
doc/tutorials/: index.rst
khiops/: __init__.py  _version.py  tools.py
khiops/core/: __init__.py  analysis_results.py  api.py  coclustering_results.py  dictionary.py  exceptions.py  helpers.py
khiops/core/internals/: __init__.py  common.py  filesystems.py  io.py  runner.py  scenario.py  task.py  types.py  version.py
khiops/core/internals/tasks/: __init__.py  build_deployed_dictionary.py  build_dictionary_from_data_table.py  build_multi_table_dictionary.py  check_database.py  deploy_model.py  detect_data_table_format.py  detect_data_table_format_with_dictionary.py  evaluate_predictor.py  export_dictionary_as_json.py  extract_clusters.py  extract_keys_from_data_table.py  interpret_predictor.py  prepare_coclustering_deployment.py  reinforce_predictor.py  simplify_coclustering.py  sort_data_table.py  train_coclustering.py  train_instance_variable_coclustering.py  train_predictor.py  train_recoder.py
khiops/dataset/: dataset.py
khiops/extras/: __init__.py  docker.py
khiops/samples/: __init__.py  samples.ipynb  samples.py  samples_sklearn.ipynb  samples_sklearn.py
khiops/sklearn/: __init__.py  dataset.py  estimators.py  helpers.py  tables.py
khiops/utils/: dataset.py  helpers.py
packaging/conda/: README.md  bld.bat  build.sh  conda_build_config.yaml  meta.yaml  post-link.sh
packaging/conda/khiops/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
packaging/conda/khiops-core/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
packaging/docker/: Dockerfile.khiopspydev-ubuntu22.04
packaging/docker/khiopspydev/: Dockerfile  Dockerfile.debian  Dockerfile.rocky  Dockerfile.ubuntu  Dockerfile.ubuntu-debian  run_fake_remote_file_servers.sh  run_service.sh
pykhiops/: __init__.py  _version.py  tools.py
pykhiops/core/: __init__.py  analysis_results.py  api.py  coclustering_results.py  common.py  dictionary.py  exceptions.py  filesystems.py  helpers.py  runner.py  scenario.py
pykhiops/core/api_internals/: __init__.py  common.py  runner.py  scenario.py  task.py  types.py
pykhiops/core/api_internals/tasks/: __init__.py  build_deployed_dictionary.py  build_dictionary_from_data_table.py  build_multi_table_dictionary.py  check_database.py  deploy_model.py  detect_data_table_format.py  detect_data_table_format_with_dictionary.py  evaluate_predictor.py  export_dictionary_as_json.py  extract_clusters.py  extract_keys_from_data_table.py  prepare_coclustering_deployment.py  simplify_coclustering.py  sort_data_table.py  train_coclustering.py  train_predictor.py  train_recoder.py
pykhiops/core/internals/: __init__.py  common.py  io.py  runner.py  scenario.py  task.py  types.py  version.py
pykhiops/core/internals/tasks/: __init__.py  build_deployed_dictionary.py  build_dictionary_from_data_table.py  build_multi_table_dictionary.py  check_database.py  deploy_model.py  detect_data_table_format.py  detect_data_table_format_with_dictionary.py  evaluate_predictor.py  export_dictionary_as_json.py  extract_clusters.py  extract_keys_from_data_table.py  prepare_coclustering_deployment.py  simplify_coclustering.py  sort_data_table.py  train_coclustering.py  train_predictor.py  train_recoder.py
pykhiops/core/scenarios/: README.md
pykhiops/core/scenarios/10.0/: _build_deployed_dictionary._kh  _build_dictionary_from_data_table._kh  _build_multi_table_dictionary._kh  _check_database._kh  _deploy_model._kh  _detect_data_table_format._kh  _detect_data_table_format_with_dictionary._kh  _evaluate_predictor._kh  _export_dictionary_as_json._kh  _extract_clusters._khc  _extract_keys_from_data_table._kh  _prepare_coclustering_deployment._khc  _simplify_coclustering._khc  _sort_data_table._kh  _train_coclustering._khc  _train_predictor._kh  (+1 more)
pykhiops/core/scenarios/10.0.7/: _simplify_coclustering._khc
pykhiops/extras/: __init__.py  docker.py
pykhiops/samples/: samples.ipynb  samples.py  samples_sklearn.ipynb  samples_sklearn.py
pykhiops/sklearn/: __init__.py  estimators.py  tables.py  utils.py
scripts/: extract_dependencies_from_pyproject_toml.py  update_copyright.py
tests/: __init__.py  test_core.py  test_dataset_class.py  test_dataset_errors.py  test_estimator_attributes.py  test_helper.py  test_helper_functions.py  test_khiops_integrations.py  test_multitable_fit_predict.py  test_parallel_execution.py  test_remote_access.py  test_samples.py  test_sklearn.py  test_sklearn_output_types.py
tests/resources/: README.md  reference_paths.txt
(+375 files in other folders)
