[tool.black]
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.pylint.format]
# Black line length
max-line-length = 88

# Fail on errors and specific rules or if there are too many errors
fail-on = ["E", "line-too-long", "unused-variable", "unused-import"]
fail-under = 9.9

[tool.pylint.messages_control]
disable = [
  # Our exceptions
  "too-many-lines",
  "unnecessary-dunder-call",

  # Google pylint exceptions (https://google.github.io/styleguide/pyguide.html,
  # amended by https://pylint.readthedocs.io/en/latest/user_guide/checkers/features.html)
  "abstract-method",
  "arguments-differ",
  "attribute-defined-outside-init",
  "c-extension-no-member",
  "consider-using-enumerate",
  "duplicate-code",
  "fixme",
  "global-statement",
  "implicit-str-concat",
  "import-error",
  "import-self",
  "inconsistent-return-statements",
  "misplaced-format-function",
  "missing-function-docstring",
  "no-else-break",
  "no-else-continue",
  "no-else-raise",
  "no-else-return",
  "no-member",
  "no-name-in-module",
  "signature-differs",
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-boolean-expressions",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",
  "trailing-newlines",
  "unnecessary-pass",
  "useless-else-on-loop",
  "useless-object-inheritance",
  "wrong-import-order",
]

[tool.yamlfix]
line_length = 100

[tool.coverage.run]
branch = true
source = ["khiops"]

[tool.coverage.report]
exclude_lines = [
   "pragma: no cover",
   "def __repr__",
   "if self.debug:",
   "if settings.DEBUG",
   "raise AssertionError",
   "raise NotImplementedError",
   "if 0:",
   "if __name__ == .__main__.:",
   "if self.verbose:"
]
show_missing = true
ignore_errors = true

[project]
name = "khiops"
dynamic = ["version"]
description = "Python library for the Khiops AutoML suite"
readme = "README.md"
license = "BSD-3-Clause-Clear"
license-files = ["LICENSE.md"]
maintainers = [
    {name = "The Khiops Team", email = "khiops.team@orange.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.8"
dependencies = [
    # do not use the latest versions, to avoid undesired breaking changes
    "pandas>=0.25.3,<=2.3.3",
    "scikit-learn>=0.22.2,<=1.7.2",
]

[project.urls]
Homepage = "https://khiops.org"

[project.optional-dependencies]
s3 = [
    # do not use the latest version, to avoid undesired breaking changes
    "boto3>=1.17.39,<=1.35.69",
]
gcs = [
    "google-cloud-storage>=1.37.0",
]

[tool.setuptools.packages.find]
include = ["khiops", "khiops.*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "khiops.__version__"}

[project.scripts]
kh-status = "khiops.tools:kh_status_entry_point"
kh-samples = "khiops.tools:kh_samples_entry_point"
kh-download-datasets = "khiops.tools:kh_download_datasets_entry_point"

[build-system]
requires = ["setuptools", "tomli; python_version<'3.11'", "toml; python_version>='3.12'"]
build-backend = "setuptools.build_meta"
